--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="12">
         <tr>
-            <td> <img src="../Ayuba cest moi-modified.png" alt="Ayuba at Farm" style="width:200px ;"></td>
+            <td> <img src="Ayuba cest moi-modified.png" alt="Ayuba at Farm" style="width:200px ;"></td>
             <td><h1>Ayuba Nuhu</h1>
                 <p><em> Student of <strong><a href="https://en.wikipedia.org/wiki/Web_development">Website Development</a></strong> </em></p>
                 <p> My Name is Ayuba Nuhu, I am trying to master all skills of this course in a 4 weeks so that I can start getting paid for my work</p>
